[package]
name = "clap-utils"
version = "0.4.0"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/clap-utils"
repository = "https://github.com/tyrchen/clap-utils"
homepage = "https://github.com/tyrchen/clap-utils"
description = """
A collection of utilities for building command line applications.
"""
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["clap", "utility"]

[features]
default = []
highlight = ["syntect"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
atty = "0.2"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dialoguer = { version = "0.11", features = [
  "completion",
  "fuzzy-matcher",
  "fuzzy-select",
  "history",
] }
enum_dispatch = "0.3"
paste = "1"
strum = { version = "0.25", features = ["derive"] }
syntect = { version = "5", optional = true }

[dev-dependencies]
insta = "1"
serde_json = "1"
